# pycommandparse

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: python-app.yml
pycommandparse/: __init__.py  command.py  errors.py  groups.py  misc.py
pycommandparse/event_loops/: __init__.py  baseloop.py
pycommandparse/parsers/: __init__.py  baseparser.py
tests/: __init__.py  __main__.py  test_pycommandparse.py
